app-ingress-internal.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 30
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  annotations:
    cloud.google.com/backend-config: '{"ports": {"http-port": "app-backend-config"}}'
spec:
  selector:
    app: app
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 8080
---
# Internal Ingress for app
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-internal-ingress
  annotations:
    kubernetes.io/ingress.class: "gce-internal"  # Annotation for Internal Load Balancer
    kubernetes.io/ingress.regional-static-ip-name: "int-ip-ingress" # Specify the static IP name for ingress
spec:
  rules:
  - host: app.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
  # TLS configuration if need
  #tls:
  #- hosts:
  #  - app.domain.com
  #  secretName: app-tls # Reference to the self-managed certificate secret
---
