ingress-app.yml
# Deployment cho dịch vụ 1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-1
  labels:
    app: hello-app-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app-1
  template:
    metadata:
      labels:
        app: hello-app-1
    spec:
      containers:
      - name: hello-app-1
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
        ports:
        - containerPort: 8080

---
# Service cho dịch vụ 1
apiVersion: v1
kind: Service
metadata:
  name: hello-app-1-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-app-1

---
# Deployment cho dịch vụ 2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-2
  labels:
    app: hello-app-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app-2
  template:
    metadata:
      labels:
        app: hello-app-2
    spec:
      containers:
      - name: hello-app-2
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
        ports:
        - containerPort: 8080

---
# Service cho dịch vụ 2
apiVersion: v1
kind: Service
metadata:
  name: hello-app-2-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-app-2

---
# Ingress để expose nhiều subdomain với SSL được quản lý bởi Google và IP tĩnh
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "app-certificate"
    kubernetes.io/ingress.global-static-ip-name: "ip-ingress"
    cert-manager.io/issue-temporary-certificate: "true"
spec:
  tls:
  - hosts:
    - app1.mrcloud.vn
    - app2.mrcloud.vn
  rules:
  - host: app1.mrcloud.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-app-1-service
            port:
              number: 80
  - host: app2.mrcloud.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-app-2-service
            port:
              number: 80
